--- a/styles/styles.css
+++ b/styles/styles.css
@@ -3,33 +3,52 @@ body {
     margin: 2px;
     display: block;
     font-weight: 900;
-   /* background-image: url("../images/ ## ");
-    background-size: cover;
-    background-repeat: no-repeat; */
+   background-image: linear-gradient(circle at 10% 20%, RGB(98, 114, 128) 0%, RGB(52, 63, 51) 90%);
+    background-size: 100%;
+    background-repeat: no-repeat; 
     justify-content: center;
     font-size: 18px;
     height: auto;
     width: 100%;
-    color: blueviolet;
+    color: #FFFFFF;
     text-align: center;
 
 }
 
 
-
+header {
+  
+    width: 100%;
+    border-bottom: 5px solid red;
+    color: purple;
+    position: abolute;
+    
+    display: block flow-root;
+    text-align: center;
+   background-image: linear-gradien(orange, red,  yellow, green, blue, indigo, violet);
+   background-size: 100%;
+   background-repeat: no-repeat;
+  height:25%;
+    text-decoration: underline;
+  }
 
 /* -------------------------- CUSTOM ----------------*/
-.background-img {
+/*.background-img {
     background-image: url("../images/wallpaper-3.jpg");
     background-size: cover;
     background-repeat: no-repeat;
     
    
 }
+*/
 
-#LOGO {
-    background-image: url("../images/screenshobackg.png");
-    background-size: cover;
+.blockBAckground {
+    background-image: radial-gradien(orange, red,  yellow, green, blue, indigo, violet);
+}
+
+#logo {
+    background-image: url("../images/logo.png");
+    background-size:contain;
     background-repeat: no-repeat;
 }
 
@@ -47,14 +66,167 @@ body {
     
 }
 
+
+/* ---------------------------- HEADER - */
+
+a {
+    text-decoration: none;
+    color: #10E99F;
+  }
+  .site-header { 
+    background-image: radial-gradien(orange, red,  yellow, green, blue, indigo, violet);
+    border-bottom: 1px solid #ccc;
+    padding: .5em 1em;
+  }
+  
+  .site-header::after {
+    content: "";
+    display: table;
+    clear: both;
+  }
+  
+  .site-identity {
+    float: center;
+  }
+  
+  .site-identity h1 {
+    font-size:19px;
+    margin: 0;
+    display: inline-flex;
+  }
+  
+  .site-identity img {
+    max-width: 100%;
+    float: center;
+    margin: 0;
+    justify-content: center;
+display: inline-flex;  
+background-image: radial-gradien(orange, red,  yellow, green, blue, indigo, violet);
+}
+  
+  .site-navigation {
+    float: center;
+  }
+  
+  .site-navigation a {
+    margin: 0; 
+    padding: 0;
+  }
+  
+  .site-navigation a {
+    display: inline-block;
+    margin: 0;
+  }
+
+  
+ 
+      .logo {
+        background: #FFFFFF url("../images/logo.png");
+        background-size: contain;
+        background-repeat: no-repeat;
+        background-color: black;
+        position: relative;
+        flex-wrap: wrap;
+        display: block flow-root;
+        height: 15vh;
+        width: 50%;
+        min-width: 200px;
+        max-height: 625px;
+        margin-left: 15em;
+        font-size:20px;
+        justify-content:right;
+        align-items: right;
+      }
+
+   .img {
+       
+       
+        background-color: black;
+        position: relative;
+        flex-wrap: wrap;
+        display: inline flow-root;
+        height: 15vh;
+        width: 50%;
+        min-width: 200px;
+        max-height: 625px;
+        margin-left: 15em;
+        font-size:20px;
+      justify-content:right;
+      align-items: right;
+      }
+    
+   /* .KT {
+        background: #FFFFFF url("../images/KT.png");
+        background-size: 20%;
+        background-repeat: no-repeat;
+        background-color: black;
+        position: relative;
+        flex-wrap: wrap;
+        display: block flow-root;
+        height: 1vh;
+        width: 100%;
+        min-width: 200px;
+        max-height: 625px;
+        margin-right: 15em;
+        font-size:20px;
+        margin-top:1%;
+        float: left;
+        align-items: right;
+        
+    }
+*/
+    button, input, select,
+textarea, label {
+    font-weight: 400;
+}
+
+.btn {
+    -webkit-transition: all 0.3s ease 0s;
+    -moz-transition: all 0.3s ease 0s;
+    -o-transition: all 0.3s ease 0s;
+    transition: all 0.3s ease 0s;
+}
+
+    .btn:hover, .btn:focus, .btn:active:focus {
+        outline: 3px rgb(0, 76, 255);
+    }
+
+.btn-primary {
+    background-color: #3f4646;
+    border: 13px;
+    font-family: "Open Sans", sans-serif;
+    font-weight: 700;
+    height: 35px;
+    line-height: 35px;
+    padding: 10px;
+    margin-right: 20px;
+    text-transform: uppercase;
+    align-items:baseline;
+    display: inline-flex;
+    justify-content: center;
+}
+
+    .btn-primary:hover, .btn-primary:focus, .btn-primary:active, .btn-primary:active:focus {
+        background-color: #09fff7;
+    }
+
+.btn-border {
+    border: 5px solid #b3c2ef;
+    display: inline-block;
+    padding: 7px;
+}
+
+
 /* ------------ FOOTER --------- */
 .site-footer
 {
-  background-color:rgb(61, 240, 6);
+  background-image: url(images/footer.png);
+  background-repeat: no-repeat;
+  background-size:cover;
   flex-wrap: wrap;
   font-size:15px;
   line-height: 20px;
-  color:black;
+  color:rgba(0, 217, 255, 0.51);
   font-weight: 900;
   margin-top:30px;
   position:inherit;
